# proc_macro2_diagnostic

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.devcontainer/: Dockerfile
.github/: dependabot.yml
.github/workflows/: dependabot-approve.yml  dependabot.yml  deploy-rust.yml  rust-publish.yml  rust-stability.yml  rust.yml
src/: lib.rs
tests/: test_compilation.rs
tests/compilation/: Cargo.toml  build.rs  lib.rs
tests/compilation/examples/: fail_convert_syn.rs  fail_convert_syn.stderr  fail_error.rs  fail_error.stderr  fail_error_and_help.stderr  fail_helpful_warning.rs  fail_helpful_warning.stderr  fail_multi_span_help.rs  fail_multi_span_help.stderr  fail_multi_span_warn.rs  fail_multi_span_warn.stderr  fail_note.stderr  fail_oops.rs  fail_oops.stderr  fail_span_slice_help.rs  fail_span_slice_help.stderr  fail_vec_span_warn.rs  fail_vec_span_warn.stderr  fail_warn.rs  fail_warn.stderr  fail_warn_multispan.rs  pass_all.rs  pass_bingo.rs
tests/compilation/examples/neither/: fail_convert_syn.stderr  fail_error.stderr  fail_error_and_help.stderr  fail_error_spanned.stderr  fail_helpful_warning.rs  fail_helpful_warning.stderr  fail_note.stderr  fail_span_slice_help.stderr  fail_vec_span_warn.stderr  fail_warn.rs  fail_warn.stderr
tests/compilation/examples/no_diagnostic/: fail_convert_syn.stderr  fail_error.rs  fail_error.stderr  fail_error_and_help.stderr  fail_error_spanned.stderr  fail_helpful_warning.stderr  fail_note.rs  fail_note.stderr  fail_span_slice_help.stderr  fail_vec_span_warn.stderr  fail_warn.stderr
tests/compilation/examples/no_try/: fail_convert_syn.stderr  fail_error.stderr  fail_error_and_help.rs  fail_error_and_help.stderr  fail_error_spanned.rs  fail_error_spanned.stderr  fail_helpful_warning.stderr  fail_note.stderr  fail_span_slice_help.stderr  fail_vec_span_warn.rs  fail_vec_span_warn.stderr  fail_warn.stderr
tests/compilation/tests/: fail_oops.rs
