[package]
name = "proc_macro2_diagnostic"
version = "0.3.1"
edition = "2024"
readme = "README.md"
description = "Use `Diagnostic` compiler messages from proc_macro2 code with Result-like syntax."
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["proc_macro2", "Diagnostic", "Try"]
homepage = "https://github.com/MusicalNinjaDad/proc_macro2_diagnostic"
repository = "https://github.com/MusicalNinjaDad/proc_macro2_diagnostic"
categories = ["development-tools"]
license = "MIT"
exclude = [".github", ".devcontainer"]
rust-version = "1.85.1"

[lib]

[dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
syn = "2.0.117"

[dev-dependencies]
proc_macro2_diagnostic_fixture = { workspace = true }
quote = "1.0.45"
trybuild = "1.0.116"

[features]
nightly_try = []
stable_try = []

[build-dependencies]
autocfg = { workspace = true }
ninja-build_rs= { workspace = true }

[workspace]
members = ["tests/compilation"]

[workspace.dependencies]
autocfg = "1.5.0"
ninja-build_rs = {git = "https://github.com/MusicalNinjaDad/rust", branch = "proc_macro_diagnostic"}

proc_macro2_diagnostic = { path = "." }
proc_macro2_diagnostic_fixture = { path = "tests/compilation" }
