[package]
name = "proc_macro2_diagnostic"
version = "0.6.6"
edition = "2024"
readme = "README.md"
description = "Use `Diagnostic` compiler messages from proc_macro2 code with Result-like syntax."
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
keywords = ["proc_macro2", "Diagnostic", "Try"]
homepage = "https://github.com/MusicalNinjaDad/proc_macro2_diagnostic"
repository = "https://github.com/MusicalNinjaDad/proc_macro2_diagnostic"
categories = ["development-tools"]
license = "MIT"
exclude = [".github", ".devcontainer"]
rust-version = "1.93.1"

[lib]

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
try_v2_traits.workspace = true

[dev-dependencies]
proc_macro2_diagnostic_fixture.workspace = true
quote.workspace = true
trybuild.workspace = true

[build-dependencies]
build_safely.workspace = true

[workspace]
members = ["tests/compilation"]

[workspace.dependencies]
build_safely = "0.5.1"
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
quote = "1.0.46"
syn = "2.0.118"
try_v2_traits = "0.10.0"
trybuild = "1.0.117"

proc_macro2_diagnostic = { path = "." }
proc_macro2_diagnostic_fixture = { path = "tests/compilation" }

[patch.crates-io]
build_safely = { git = "https://github.com/MusicalNinjaDad/build_safely", branch = "has" }
