[package]
name = "proc_macro2_diagnostic_fixture"
version = "0.0.1"
edition = "2024"
publish = false
description = "Test fixture for proc_macro2_diagnostic"
authors = ["Mike Foster <https://github.com/MusicalNinjaDad>"]
license = "MIT"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
proc-macro2.workspace = true
proc_macro2_diagnostic.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]

[build-dependencies]
autocfg = { workspace = true }
build_safely = { workspace = true }
